--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "functions": {
-        "api/app.py": {
+        "app.py": {
             "runtime": "python3.11"
         }
     },
@@ -12,7 +12,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "api/app.py"
+            "dest": "app.py"
         }
     ]
 }
