--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
     "version": 2,
-    "functions": {
-        "app.py": {
-            "runtime": "python3.11"
-        }
-    },
-    "routes": [
+    "builds": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
+            "src": "app.py",
+            "use": "@vercel/python"
+        }
+    ],
+    "routes": [
         {
             "src": "/(.*)",
             "dest": "app.py"
