--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,11 @@
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "/api/static/$1"
+            "dest": "static/$1"
         },
         {
             "src": "/(.*)",
-            "dest": "api/app.py"
+            "dest": "app.py"
         }
     ]
 }
