--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,19 @@
 {
-    "version": 2,
-    "functions": {
-        "api/app.py": {
-            "runtime": "python3.12"
+    "builds": [
+        {
+            "src": "api/app.py",
+            "use": "@vercel/python",
+            "config": {
+                "includeFiles": [
+                    "static/**"
+                ]
+            }
         }
-    },
+    ],
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
             "src": "/(.*)",
-            "dest": "app.py"
+            "dest": "api/app.py"
         }
     ]
 }
