--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
             "use": "@vercel/python",
             "config": {
                 "includeFiles": [
-                    "static/**"
+                    "static/**",
+                    "templates/**"
                 ]
             }
         }
