--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
-<<<<<<< HEAD
-    "rewrites": [
-        {
-            "source": "/(.*)",
-            "destination": "/api/server.js"
-=======
+    "source": "/(.*)",
+    "destination": "/api/server.js",
     "builds": [
         {
             "src": "api/app.py",
@@ -21,7 +17,6 @@
         {
             "src": "/(.*)",
             "dest": "api/app.py"
->>>>>>> d9dfaadad1d367dd54fea015bbfd92fd17c4fc1d
         }
     ]
 }
